Package: aroma.core
===================

Version: 2.11.2 [2013-12-11]
o DOCUMENTATION: Added documentation for exportAromaUnitPscnBinarySet().


Version: 2.11.1 [2013-11-15]
o Added argument 'onMissing' to getOutputDataSet() for AromaTransform.
  This replaces argument 'incomplete', which will be dropped in a
  future version, but is for now supported as well.


Version: 2.11.0 [2013-10-16]
o CLEANUP: Minor adjustments of NAMESPACE imports.
o CLEANUP: Dropped colMedians() for AromaTabularBinaryFile.
  If needed, there is always colStats().
o Updated package dependencies.
o Now package requires R (>= 2.15.0) [and Bioc (>= 2.10.0)].


Version: 2.10.6 [2013-10-07]
o CLEANUP: Now explicitly importing only what is needed in NAMESPACE.
o BACKWARD COMPATIBILITY: For R (< 3.0.2) only the maximum of 500
  S3 methods are declared in NAMESPACE.
o Updated package dependencies.


Version: 2.10.5 [2013-10-03]
o Added argument 'chromosomes' to ChromosomalModel() and setChromosomes()
  for the same class.  If not specified, the default is as before to infer
  the set of chromosomes from the UGP files.
o HELP: Now the sanity-check error that CopyNumberChromosomalModel throws
  gives a more informative error message suggesting to adjust argument
  'maxNAFraction' when setting up the model.


Version: 2.10.4 [2013-09-28]
o Now the 'aroma.core' Package object is also available when the
  package is only loaded (but not attached).
o CLEANUP: Now only importing the exact set of methods needed from
  the 'R.utils' package.


Version: 2.10.3 [2013-09-20]
o CLEANUP: Now only importing the exact set of methods needed from
  the 'matrixStats' package.
o ROBUSTNESS: Forgot to import R.methodsS3::appendVarArgs().
o Updated package dependencies.


Version: 2.10.2 [2013-09-11]
o CLEANUP: Backward-compatibility code for obsolete EBImage was
  no longer needed.
o CLEANUP: Updated package dependencies.


Version: 2.10.1 [2013-08-12]