@@ -54,7 +54,7 @@ SegmentedAlleleBFractions(..., states=NULL)
 
 
  \bold{Methods inherited from SegmentedGenomicSignalsInterface}:\cr
-as.data.frame, binnedSmoothingByState, extractSubsetByState, getStateColorMap, getStateColors, getStates, getUniqueStates, getVirtualField, getVirtualLocusFields, kernelSmoothingByState, plot, points, setStateColorMap, setStates
+as.data.frame, binnedSmoothingByState, extractSubsetByState, findChangePointsByState, getStateColorMap, getStateColors, getStates, getUniqueStates, getVirtualField, getVirtualLocusFields, kernelSmoothingByState, plot, points, setStateColorMap, setStates
 
  \bold{Methods inherited from RawAlleleBFractions}:\cr
 extractRawMirroredAlleleBFractions, plot
